force-app/main/default/objects/cgcloud__Account_Org_Unit__c/cgcloud__Account_Org_Unit__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between customer and the org unit.</description>
    <label>Customer Org Unit</label>
    <nameField>
        <displayFormat>AOU-{0000}</displayFormat>
        <label>Customer Org Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Org Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>