force-app/main/default/objects/cgcloud__Account_Org_Unit__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Org Units</relationshipLabel>
    <relationshipName>Account_Org_Units</relationshipName>
    <type>Lookup</type>
</CustomField>