force-app/main/default/objects/cgcloud__Account_Org_Unit__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the relationship is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>