force-app/main/default/objects/cgcloud__Account_Org_Unit__c/fields/cgcloud__Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Unit__c</fullName>
    <description>Reference to Org Unit.</description>
    <label>Org Unit</label>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Customer Org Units</relationshipLabel>
    <relationshipName>Account_Org_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>