force-app/main/default/objects/cgcloud__Account_Org_Unit__c/validationRules/cgcloud__Account_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Account_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>OR (ISBLANK(cgcloud__Account__c), ISNULL(cgcloud__Account__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Account__c</errorDisplayField>
    <errorMessage>The Customer can&apos;t be empty.</errorMessage>
</ValidationRule>