force-app/main/default/objects/cgcloud__Account_Org_Unit__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <description>The Org Unit and the Customer Recipient must have the same Sales Org.</description>
    <errorConditionFormula>cgcloud__Account__r.cgcloud__Sales_Org__c &lt;&gt; TEXT( cgcloud__Org_Unit__r.cgcloud__Sales_Org__c )</errorConditionFormula>
    <errorMessage>The Org Unit and the Customer Recipient must have the same Sales Org.</errorMessage>
</ValidationRule>